@@ -1,11 +1,0 @@
-<?php // Note!! then main content of this view is located in the controller!!! ?>
-<style type="text/css">
-html,
-body {
-background-color: transparent;
-border: 0px;
-}
-</style>
-<form method="post" action="<?=FORMPREFIX?>/settings/software" target="_top">
-<input type="submit" value="<?=t('Back')?>"/>
-</form>
