@@ -5,11 +5,12 @@ bubba-frontend (1.3.2) claire; urgency=low
    - Services
    - System Backup/Restore
    - Date/Time
+   - Software
   * Added FirePHP (default enabled at the moment) 
   * added initial jQuery-UI support 
   * removing old fwupdate view which hasn't been used for ages 
 
- -- Carl Fürstenberg <carl@excito.com>  Wed, 17 Feb 2010 18:29:20 +0100
+ -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Feb 2010 13:33:23 +0100
 
 bubba-frontend (1.3.1) karmic; urgency=low
 
